# seekr2

./: .gitattributes  .lgtm.yml  .readthedocs.yaml  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py
.github/: CONTRIBUTING.md
.github/workflows/: CI.yaml
devtools/: README.md
devtools/conda-envs/: test_env.yaml
docs/: Makefile  README.md  analyze.rst  analyze_results.rst  api.rst  api_examples.rst  base.rst  citations.rst  conf.py  converge.rst  faq.rst  filetree.rst  getting_started.rst  index.rst  installation.rst  make.bat  model_input_files.rst  prepare_1d_spherical.rst  prepare_input_file.rst  program_options.rst  program_options_analyze.rst  program_options_converge.rst  program_options_prepare.rst  program_options_run.rst  requirements.txt  requirements.yaml  run_openmmvt.rst  runner_browndye2.rst  runner_namd.rst  runner_openmm.rst  running_calculations.rst  sim_browndye2.rst  sim_namd.rst  sim_openmm.rst  tutorial.rst  tutorial1_hostguest.rst  tutorial2_toy_systems.rst  write_sample_input.rst
seekr2/: __init__.py  _version.py  analyze.py  converge.py  prepare.py  run.py  seekr2.py  write_sample_input.py
seekr2/common/: base.py  collective_variables.py  filetree.py  prepare.py  runner_browndye2.py  sim_browndye2.py
seekr2/continuous_integration/: run_ci.py
seekr2/data/: hostguest.parm7  hostguest.xml  hostguest_ligand.pqr  hostguest_receptor.pqr  hostguest_run.py  sample_input_elber_namd.xml  sample_input_elber_openmm.xml  sample_input_mmvt_namd.xml  sample_input_mmvt_openmm.xml
seekr2/data/hostguest_files/: hostguest.parm7  hostguest.rst7  hostguest_for_NAMD.parm7  (+6 more)
seekr2/elber/: base.py  collective_variables.py
seekr2/mmvt/: base.py  collective_variables.py  runner_openmm.py  sim_openmm.py
seekr2/modules/: __init__.py  check.py  check_for_bubbles.py  common_analyze.py  common_base.py  common_converge.py  common_cv.py  common_prepare.py  common_sim_browndye2.py  common_sim_namd.py  common_sim_openmm.py  common_sim_toy.py  elber_analyze.py  elber_base.py  elber_cv.py  elber_sim_namd.py  elber_sim_openmm.py  filetree.py  markov_chain_monte_carlo.py  mmvt_analyze.py  mmvt_base.py  mmvt_cv.py  mmvt_sim_namd.py  mmvt_sim_openmm.py  runner_browndye2.py  runner_namd.py  runner_openmm.py  runner_toy.py
seekr2/tests/: conftest.py  create_model_input.py  create_toy_system.py  make_test_model.py  pytest.ini  smoluchowski_system.py  test_analyze.py  test_check.py  test_common_analyze.py  test_common_base.py  test_common_converge.py  test_common_cv.py  test_common_prepare.py  test_common_sim_browndye2.py  test_common_sim_openmm.py  test_converge.py  test_elber_analyze.py  test_elber_base.py  test_elber_cv_base.py  test_elber_external_cv.py  test_elber_sim_openmm.py  test_elber_spherical_cv.py  test_markov_chain_monte_carlo.py  test_matrix_stability.py  test_mmvt_analyze.py  test_mmvt_base.py  test_mmvt_closest_pair_cv.py  test_mmvt_count_contacts_cv.py  test_mmvt_cv.py  test_mmvt_cv_base.py  test_mmvt_external_cv.py  test_mmvt_planar_cv.py  test_mmvt_rmsd_cv.py  test_mmvt_sim_namd.py  test_mmvt_sim_openmm.py  test_mmvt_spherical_cv.py  test_mmvt_tiwary_cv.py  test_mmvt_voronoi_cv.py  test_prepare.py  test_run.py  (+4 more)
seekr2/toy/: smoluchowski.py  toy_engine.py
(+62 files in other folders)
