[build-system]
requires = ["setuptools>=61.0", "versioningit~=2.0"]
build-backend = "setuptools.build_meta"

# Self-descriptive entries which should always be present
[project]
name = "seekr2"
description = "Simulation-Enabled Estimation of Kinetic Rates - Version 2."
dynamic = ["version"]
readme = "README.md"
authors = [
    { name = "Lane Votapka", email = "lvotapka@protonmail.com" }
]
license = { text = "MIT" }
# See https://pypi.org/classifiers/
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
# Declare any run-time dependencies that should be installed with the package.
dependencies = [
    "numpy",
    "scipy",
    "pyparsing",
    "matplotlib",
    "nptyping",
    "parmed",
    "mdtraj",
    "pytest",
    "abserdes",
    "PyGT",
]

# Update the urls once the hosting is set up.
[project.urls]
"Source" = "https://github.com/seekrcentral/seekr2"
"Documentation" = "https://seekr2.readthedocs.io"

[tool.setuptools]
# This subkey is a beta stage development and keys may change in the future, see https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html for more details
#
# As of version 0.971, mypy does not support type checking of installed zipped
# packages (because it does not actually import the Python packages).
# We declare the package not-zip-safe so that our type hints are also available
# when checking client code that uses our (installed) package.
# Ref:
# https://mypy.readthedocs.io/en/stable/installed_packages.html?highlight=zip#using-installed-packages-with-mypy-pep-561
zip-safe = false
# Let setuptools discover the package in the current directory,
# but be explicit about non-Python files.
# See also:
#   https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#setuptools-specific-configuration
# Note that behavior is currently evolving with respect to how to interpret the
# "data" and "tests" subdirectories. As of setuptools 63, both are automatically
# included if namespaces is true (default), even if the package is named explicitly
# (instead of using 'find'). With 'find', the 'tests' subpackage is discovered
# recursively because of its __init__.py file, but the data subdirectory is excluded
# with include-package-data = false and namespaces = false.
include-package-data = true
[tool.setuptools.packages.find]
namespaces = true
where = ["."]

# Ref https://setuptools.pypa.io/en/latest/userguide/datafiles.html#package-data
[tool.setuptools.package-data]
qmrebind = [
    "py.typed",
# Commenting these so that other packages can easily import seekr2 test data.
#    "*.dat",
#    "*.txt",
#    "*.pdb",
#    "*.pqr",
#    "*.parm7",
#    "*.prmtop",
#    "*.rst7",
#    "*.xml",
]

[tool.versioningit]
default-version = "2.1.0"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
# The method key:
method = "git"  # <- The method name
# Parameters to pass to the method:
match = ["*"]
default-tag = "2.1.0"

[tool.versioningit.write]
file = "seekr2/_version.py"


